# circles

./: .dockerignore  .env.example  .gitignore  CHANGELOG_DM.md  CHECK_IN_EXPIRY_LOGIC.md  CLOUD_COST_ESTIMATE.md  DM_ENDPOINTS.md  Dockerfile  ENHANCED_PLACE_DATA_ANALYSIS.md  ENHANCED_PLACE_DATA_IMPLEMENTATION_COMPLETE.md  FUNCTIONALITY_PRECEDENCE_REVIEW.md  OSM_POPULATION_README.md  PLACES_PY_REVIEW.md  PLACE_DATA_GUIDE.md  README.md  TEST_SUMMARY.md  WEBSOCKET_ENDPOINTS.md  add_missing_columns.sql  alembic-fix-task.json  alembic.ini  analyze_api_calls.py  apply_aws_migration.py  buildspec.yml  circles.db  create_user_60.sql  db-migration-fix.json  debug_api_analysis.py  docker-compose.yml  enhanced_api_analyzer.py  env.example  fix-migration-task.json  fix_alembic.py  fix_db.sql  fix_migration.py  lambda_sync_user.py  list_demo.db  local.db  local_func.db  migrate_aws_db.py  migrate_database.py  (+30 more)
ai/: dms-format-errors-fix.md
alembic/: env.py
app/: config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py  utils.py
backup_routers/: collections.py  dms_ws.py  users.py
docs/: ARCHITECTURE.md  CI-CD-README.md  Circles App desc.docx  Circles Feature Phases.xlsx  SRS.md  collections_endpoints.md  migration_verification_report.md  personalization-apis-movement-sdk-categories.csv  request_flow_documentation.md  request_flow_quick_reference.md  swagger_api_documentation.txt  websocket_client_example.js
migrations/: add_checkin_coordinates.sql
scripts/: backfill_city.py  clear_database.py  create_admin_user.py  deploy.sh  fix_migration_db.py  (+35 more)
(+174 files in other folders)
