[project]
name = "circles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn[standard]>=0.36.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    "pyotp>=2.9.0",
    "greenlet>=3.0.0",
    "python-jose[cryptography]>=3.3.0",
    "psycopg[binary,pool]>=3.2.1",
    "boto3>=1.40.13",
    "prometheus-client>=0.20.0",
    "pillow>=10.4.0",
    "pillow-heif>=0.20.0",
    "aiosqlite>=0.21.0",
    "websockets>=15.0.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
